--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -17,6 +17,7 @@
     <local:CircleEnclosingConverter x:Key="CircleEnclosingConverter"/>
     <local:CurrencyConverter x:Key="CurrencyConverter"/>
     <local:DateTimeConverter x:Key="DateTimeConverter"/>
+    <local:DateWeekConverter x:Key="DateWeekConverter"/>
     <local:MonthDayConverter x:Key="MonthDayConverter"/>
     <local:AsteriskConverter x:Key="AsteriskConverter"/>
     <local:CompletConverter x:Key="CompletConverter"/>
