--- a/Display/InProcessList .xaml
+++ b/Display/InProcessList .xaml
@@ -30,7 +30,7 @@
             </Grid.RowDefinitions>
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Viewbox Stretch="Uniform">
-                    <TextBlock Text="{Binding InProcessDate,Converter={StaticResource DateTimeConverter}, FallbackValue=2024年6月3日}" Style="{StaticResource TextDate}"
+                    <TextBlock Text="{Binding InProcessDate,Converter={StaticResource DateWeekConverter}, FallbackValue=2024年6月3日}" Style="{StaticResource TextDate}"
                                Foreground="{Binding InProcessDate, Converter={StaticResource DateTimeToDayOfWeekBrushConverter}, FallbackValue=#666666}" Opacity="0.8"/>
                 </Viewbox>
             </StackPanel>
