--- a/Display/Transport.xaml
+++ b/Display/Transport.xaml
@@ -36,7 +36,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0" HorizontalAlignment="Left">
-                        <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"
+                    <TextBlock Text="{Binding TransportDate, Converter={StaticResource DateWeekConverter}, FallbackValue=2024年7月21日}" Style="{StaticResource TextDateLeft}"
                                    Foreground="{Binding TransportDate, Converter={StaticResource DateTimeToDayOfWeekBrushConverter}, FallbackValue=#888888}" Opacity="0.8"/>
                     </Grid>
                 <Grid Grid.Column="1" HorizontalAlignment="Right">
