--- a/Display/TransportList.xaml
+++ b/Display/TransportList.xaml
@@ -30,7 +30,7 @@
             </Grid.RowDefinitions>
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Viewbox Stretch="Uniform">
-                    <TextBlock Text="{Binding TransportDate,Converter={StaticResource DateTimeConverter},FallbackValue=2024年7月21日}" Style="{StaticResource TextDate}"/>
+                    <TextBlock Text="{Binding TransportDate,Converter={StaticResource DateWeekConverter},FallbackValue=2024年7月21日}" Style="{StaticResource TextDate}"/>
                 </Viewbox>
             </StackPanel>
             <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
