--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -10,6 +10,7 @@
     <local:CollapsedConverter x:Key="CollapsedConverter"/>
     <local:DisplayConverter x:Key="DisplayConverter"/>
     <local:CollapsedValueConverter x:Key="CollapsedValueConverter"/>
+    <local:CollapsedNumberConverter x:Key="CollapsedNumberConverter"/>
     <local:CheckConverter x:Key="CheckConverter"/>
     <local:CoilConverter x:Key="CoilConverter"/>
     <local:CompletedConverter x:Key="CompletedConverter"/>
@@ -280,14 +281,19 @@
     </Style>
 
     <!-- Border -->
-    <Style x:Key="BorderLabel" TargetType="Border">
+    <Style x:Key="BorderLabel" TargetType="{x:Type Border}">
         <Setter Property="CornerRadius" Value="2"/>
         <Setter Property="Background" Value="#FF90A4AE"/>
         <Setter Property="Width" Value="160"/>
         <Setter Property="Height" Value="55"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
-      
+    <Style x:Key="BorderNotice" TargetType="{x:Type Border}">
+        <Setter Property="CornerRadius" Value="3"/>
+        <Setter Property="Margin" Value="0,12,0,12"/>
+        <Setter Property="Padding" Value="20,0,20,0"/>
+    </Style>
+
     <!-- CheckBox -->
     <Style TargetType="CheckBox" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
