--- a/Display/PackSpecification.xaml
+++ b/Display/PackSpecification.xaml
@@ -44,7 +44,7 @@
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="品　番" FontSize="36" HorizontalAlignment="Center" Margin="-25,0,0,0"/>
                         <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding ProductName, FallbackValue=MH024000}" FontSize="46" FontWeight="Bold"/>
-                        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" x:Name="TextProductName" Text="{Binding ProductName, FallbackValue=MH024000}" Width="480" Padding="5,5,5,5" Visibility="{Binding VisibleProduct, Converter={StaticResource CollapsedConverter}, FallbackValue=Collapsed}"
+                        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" x:Name="TextProductName" Text="{Binding ProductName, FallbackValue=MH024000}" Width="500" Padding="5,5,5,5" Visibility="{Binding VisibleProduct, Converter={StaticResource CollapsedConverter}, FallbackValue=Collapsed}"
                                  materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LengthProductName}" InputMethod.IsInputMethodEnabled="False" FontSize="40">
                             <TextBox.Resources>
                                 <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
@@ -135,33 +135,39 @@
                             </Border>
                         </Grid>
                         <TextBlock Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4" Text="{Binding ContainerComment}" FontSize="25"/>
-                    
-                    
-                    
                         <Grid Grid.Row="7" Grid.Column="0" VerticalAlignment="Top" Margin="0,10,0,0">
                             <Border Style="{StaticResource BorderLabel}">
                                 <TextBlock Text="棚　番" Style="{StaticResource TextLabel}"/>
                             </Border>
                         </Grid>
-                        <StackPanel Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" Orientation="Horizontal">
+                        <StackPanel Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" Orientation="Vertical" VerticalAlignment="Center">
+                            <StackPanel Orientation="Horizontal" Margin="0,-25,0,0">
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[0], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[0]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[1], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[1]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[2], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[2]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0" Visibility="{Binding DisplayRack[3], Converter={StaticResource CollapsedValueConverter}}" >
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[3], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[3]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[4], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[4]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                                <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding DisplayRack[5], Converter={StaticResource CollapsedValueConverter}}" Margin="0,0,10,0" Padding="15,0,15,2">
+                                    <TextBlock Text="{Binding DisplayRack[5]}" FontSize="24" Foreground="#FFFFFFFF"/>
+                                </Border>
+                            </StackPanel>
 
-                            
-                            
-                            <Border Style="{StaticResource BorderNotice}" Background="#FF2E8B57" Opacity="0.8" Visibility="{Binding RackNo, Converter={StaticResource CollapsedValueConverter}}" VerticalAlignment="Top" Margin="0,20,0,0">
-                                <TextBlock Text="{Binding RackNo}" FontSize="28" Foreground="#FFFFFFFF"/>
-                            </Border>
-                            
-                            
-                            
+
+
                         </StackPanel>
-
-
-
-
                     </Grid>
-
-
-
                 </StackPanel>
             </StackPanel>
         </Grid>
